--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
-      <a class="restart-button">New Game</a>
+      <p class="game-intro">Junte-se aos números do puzzle <strong>2048!</strong></p>
+      <a class="restart-button">Novo Jogo</a>
     </div>
 
     <div class="game-container">
       <div class="game-message">
         <p></p>
         <div class="lower">
-	        <a class="keep-playing-button">Keep going</a>
-          <a class="retry-button">Try again</a>
+          <a class="keep-playing-button">Continuar</a>
+          <a class="retry-button">Tentar Novamente</a>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <strong class="important">Como Jogar:</strong> Use as <strong>setas do teclado</strong> para mover os blocos. Quando dois blocos com o mesmo número se tocam, eles se <strong>fundem em um!</strong>
     </p>
     <hr>
   </div>
